--- a/notebooks/SmoothSHAP.ipynb
+++ b/notebooks/SmoothSHAP.ipynb
@@ -410,14 +410,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Rescaling formula from Markus new paper:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "image.png"
+    "Rescaling formula from Markus new paper:\n",
+    "\n",
+    "One way to preserve local accuracy is to scale with this factor:\n",
+    "$$\n",
+    "S_{f,x} = \\sum_{j=1}^M{\\phi_j(f,x)} / \\sum_{j=1}^M{\\hat{\\beta_j} \\cdot \\phi_j(f,x) }\n",
+    "$$\n",
+    "leading to\n",
+    "$$\n",
+    "\\widehat{SHAP}^{shrunk}_{j, in} = \\hat{\\beta_j} \\cdot \\phi_j(f,x) \\cdot S_{f,x}\n",
+    "$$\n",
+    "\n",
+    "where $\\phi_j(f,x) \\equiv  SHAP_{j, in}$ would be the \"raw\", unmodified SHAP score for feature $j$ and input $x$."
    ]
   },
   {
