Correct error in calculating rescale factor based on formula

--- a/notebooks/SmoothSHAP.ipynb
+++ b/notebooks/SmoothSHAP.ipynb
@@ -28,7 +28,10 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.base import clone\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from TreeModelsFromScratch.DecisionTree import DecisionTree\n",
+    "from TreeModelsFromScratch.RandomForest import RandomForest\n",
+    "from TreeModelsFromScratch.SmoothShap import verify_shap_model, smooth_shap"
    ]
   },
   {
@@ -92,17 +95,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Import Tree Models from scratch functions\n",
-    "import sys\n",
-    "import os\n",
+    "# #Import Tree Models from scratch functions\n",
+    "# import sys\n",
+    "# import os\n",
     "\n",
-    "module_path = os.path.abspath(os.path.join('..'))\n",
-    "if module_path not in sys.path:\n",
-    "    sys.path.append(module_path+\"/TreeModelsFromScratch\")\n",
+    "# module_path = os.path.abspath(os.path.join('..'))\n",
+    "# if module_path not in sys.path:\n",
+    "#     sys.path.append(module_path+\"/TreeModelsFromScratch\")\n",
     "\n",
-    "from DecisionTree import DecisionTree\n",
-    "from RandomForest import RandomForest\n",
-    "from SmoothShap import verify_shap_model, smooth_shap"
+    "# from DecisionTree import DecisionTree\n",
+    "# from RandomForest import RandomForest\n",
+    "# from SmoothShap import verify_shap_model, smooth_shap"
    ]
   },
   {
@@ -331,7 +334,7 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id='iJVQPLDD7EPCGM066ITHC'>\n",
+       "<div id='i3U9G26RATBMSRK4A3PKW'>\n",
        "<div style='color: #900; text-align: center;'>\n",
        "  <b>Visualization omitted, Javascript library not loaded!</b><br>\n",
        "  Have you run `initjs()` in this notebook? If this notebook was from another\n",
@@ -342,12 +345,12 @@
        " <script>\n",
        "   if (window.SHAP) SHAP.ReactDom.render(\n",
        "    SHAP.React.createElement(SHAP.AdditiveForceVisualizer, {\"outNames\": [\"f(x)\"], \"baseValue\": 151.63812217194572, \"outValue\": 183.3, \"link\": \"identity\", \"featureNames\": [\"age\", \"sex\", \"bmi\", \"bp\", \"s1\", \"s2\", \"s3\", \"s4\", \"s5\", \"s6\"], \"features\": {\"0\": {\"effect\": 0.17691758173901173, \"value\": 0.0380759064334241}, \"1\": {\"effect\": -3.047603155364396, \"value\": 0.0506801187398187}, \"2\": {\"effect\": 26.761964415974603, \"value\": 0.0616962065186885}, \"3\": {\"effect\": 4.355159252148995, \"value\": 0.0218723549949558}, \"4\": {\"effect\": -0.32353193319646456, \"value\": -0.0442234984244464}, \"5\": {\"effect\": 0.4429813637675012, \"value\": -0.0348207628376986}, \"6\": {\"effect\": 5.223910775417433, \"value\": -0.0434008456520269}, \"7\": {\"effect\": 4.398993065365181, \"value\": -0.00259226199818282}, \"8\": {\"effect\": -1.1536849751487623, \"value\": 0.0199084208763183}, \"9\": {\"effect\": -5.1732285626488315, \"value\": -0.0176461251598052}}, \"plot_cmap\": \"RdBu\", \"labelMargin\": 20}),\n",
-       "    document.getElementById('iJVQPLDD7EPCGM066ITHC')\n",
+       "    document.getElementById('i3U9G26RATBMSRK4A3PKW')\n",
        "  );\n",
        "</script>"
       ],
       "text/plain": [
-       "<shap.plots._force.AdditiveForceVisualizer at 0x7fc4527309b0>"
+       "<shap.plots._force.AdditiveForceVisualizer at 0x7f8211568940>"
       ]
      },
      "execution_count": 14,
@@ -376,7 +379,7 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id='iC8341FGPJWLHGSDXL9GT'>\n",
+       "<div id='iLMHRT30QH7AZ863GEW8B'>\n",
        "<div style='color: #900; text-align: center;'>\n",
        "  <b>Visualization omitted, Javascript library not loaded!</b><br>\n",
        "  Have you run `initjs()` in this notebook? If this notebook was from another\n",
@@ -387,12 +390,12 @@
        " <script>\n",
        "   if (window.SHAP) SHAP.ReactDom.render(\n",
        "    SHAP.React.createElement(SHAP.AdditiveForceVisualizer, {\"outNames\": [\"f(x)\"], \"baseValue\": 151.63812217194572, \"outValue\": 157.48282616900784, \"link\": \"identity\", \"featureNames\": [\"age\", \"sex\", \"bmi\", \"bp\", \"s1\", \"s2\", \"s3\", \"s4\", \"s5\", \"s6\"], \"features\": {\"0\": {\"effect\": -1.4111140824648403, \"value\": 0.0380759064334241}, \"1\": {\"effect\": -2.6241940307703815, \"value\": 0.0506801187398187}, \"2\": {\"effect\": 12.508771589652234, \"value\": 0.0616962065186885}, \"3\": {\"effect\": -0.5598333658487566, \"value\": 0.0218723549949558}, \"4\": {\"effect\": -0.6011852552375623, \"value\": -0.0442234984244464}, \"5\": {\"effect\": 1.0076351898176146, \"value\": -0.0348207628376986}, \"6\": {\"effect\": 6.014187925163515, \"value\": -0.0434008456520269}, \"7\": {\"effect\": 0.4828330641450232, \"value\": -0.00259226199818282}, \"8\": {\"effect\": -6.632922556059761, \"value\": 0.0199084208763183}, \"9\": {\"effect\": -2.339474481334965, \"value\": -0.0176461251598052}}, \"plot_cmap\": \"RdBu\", \"labelMargin\": 20}),\n",
-       "    document.getElementById('iC8341FGPJWLHGSDXL9GT')\n",
+       "    document.getElementById('iLMHRT30QH7AZ863GEW8B')\n",
        "  );\n",
        "</script>"
       ],
       "text/plain": [
-       "<shap.plots._force.AdditiveForceVisualizer at 0x7fc452730d68>"
+       "<shap.plots._force.AdditiveForceVisualizer at 0x7f8211568c88>"
       ]
      },
      "execution_count": 15,
@@ -426,16 +429,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rescale_factors = np.divide(shap_vals_rf[0,:], reg_smooth_shap_val[0,:])"
+    "#rescale_factors = np.divide(shap_vals_rf[0,:], reg_smooth_shap_val[0,:])\n",
+    "rescale_factor = np.sum(shap_vals_rf[0,:])/np.sum(reg_smooth_shap_val[0,:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +453,7 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id='iPE1EQYG9AQKXCD3M5NQQ'>\n",
+       "<div id='iG2R0A3MC31UQVZPNEWZT'>\n",
        "<div style='color: #900; text-align: center;'>\n",
        "  <b>Visualization omitted, Javascript library not loaded!</b><br>\n",
        "  Have you run `initjs()` in this notebook? If this notebook was from another\n",
@@ -459,16 +463,16 @@
        "</div></div>\n",
        " <script>\n",
        "   if (window.SHAP) SHAP.ReactDom.render(\n",
-       "    SHAP.React.createElement(SHAP.AdditiveForceVisualizer, {\"outNames\": [\"f(x)\"], \"baseValue\": 151.63812217194572, \"outValue\": 183.29999999999998, \"link\": \"identity\", \"featureNames\": [\"age\", \"sex\", \"bmi\", \"bp\", \"s1\", \"s2\", \"s3\", \"s4\", \"s5\", \"s6\"], \"features\": {\"0\": {\"effect\": 0.17691758173901173, \"value\": 0.0380759064334241}, \"1\": {\"effect\": -3.0476031553643956, \"value\": 0.0506801187398187}, \"2\": {\"effect\": 26.7619644159746, \"value\": 0.0616962065186885}, \"3\": {\"effect\": 4.355159252148995, \"value\": 0.0218723549949558}, \"4\": {\"effect\": -0.32353193319646456, \"value\": -0.0442234984244464}, \"5\": {\"effect\": 0.4429813637675012, \"value\": -0.0348207628376986}, \"6\": {\"effect\": 5.223910775417433, \"value\": -0.0434008456520269}, \"7\": {\"effect\": 4.398993065365181, \"value\": -0.00259226199818282}, \"8\": {\"effect\": -1.1536849751487623, \"value\": 0.0199084208763183}, \"9\": {\"effect\": -5.173228562648832, \"value\": -0.0176461251598052}}, \"plot_cmap\": \"RdBu\", \"labelMargin\": 20}),\n",
-       "    document.getElementById('iPE1EQYG9AQKXCD3M5NQQ')\n",
+       "    SHAP.React.createElement(SHAP.AdditiveForceVisualizer, {\"outNames\": [\"f(x)\"], \"baseValue\": 151.63812217194572, \"outValue\": 183.29999999999998, \"link\": \"identity\", \"featureNames\": [\"age\", \"sex\", \"bmi\", \"bp\", \"s1\", \"s2\", \"s3\", \"s4\", \"s5\", \"s6\"], \"features\": {\"0\": {\"effect\": -7.644274492413409, \"value\": 0.0380759064334241}, \"1\": {\"effect\": -14.215760257683757, \"value\": 0.0506801187398187}, \"2\": {\"effect\": 67.76240474276935, \"value\": 0.0616962065186885}, \"3\": {\"effect\": -3.032724264989556, \"value\": 0.0218723549949558}, \"4\": {\"effect\": -3.256735347577433, \"value\": -0.0442234984244464}, \"5\": {\"effect\": 5.458552270789102, \"value\": -0.0348207628376986}, \"6\": {\"effect\": 32.58000463619757, \"value\": -0.0434008456520269}, \"7\": {\"effect\": 2.6155989244261346, \"value\": -0.00259226199818282}, \"8\": {\"effect\": -35.931808303461196, \"value\": 0.0199084208763183}, \"9\": {\"effect\": -12.673380080002534, \"value\": -0.0176461251598052}}, \"plot_cmap\": \"RdBu\", \"labelMargin\": 20}),\n",
+       "    document.getElementById('iG2R0A3MC31UQVZPNEWZT')\n",
        "  );\n",
        "</script>"
       ],
       "text/plain": [
-       "<shap.plots._force.AdditiveForceVisualizer at 0x7fc452730eb8>"
+       "<shap.plots._force.AdditiveForceVisualizer at 0x7f8211568f98>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +480,7 @@
    "source": [
     "# Rescaled Smooth SHAP force plot\n",
     "print(\"Model prediction for 1st observation:\", reg_forest.predict(X_dia)[0])\n",
-    "shap.force_plot(explainer_reg.expected_value, reg_smooth_shap_val[0,:]*rescale_factors, features=X_dia.iloc[0,:])"
+    "shap.force_plot(explainer_reg.expected_value, reg_smooth_shap_val[0,:]*rescale_factor, features=X_dia.iloc[0,:])"
    ]
   },
   {
@@ -488,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +516,7 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id='iIV6VR63XBGJCQFBMV25M'>\n",
+       "<div id='iI5NEFADONY70F57PASNC'>\n",
        "<div style='color: #900; text-align: center;'>\n",
        "  <b>Visualization omitted, Javascript library not loaded!</b><br>\n",
        "  Have you run `initjs()` in this notebook? If this notebook was from another\n",
@@ -523,15 +527,15 @@
        " <script>\n",
        "   if (window.SHAP) SHAP.ReactDom.render(\n",
        "    SHAP.React.createElement(SHAP.AdditiveForceVisualizer, {\"outNames\": [\"f(x)\"], \"baseValue\": 151.63812217194572, \"outValue\": 183.3, \"link\": \"identity\", \"featureNames\": [\"age\", \"sex\", \"bmi\", \"bp\", \"s1\", \"s2\", \"s3\", \"s4\", \"s5\", \"s6\"], \"features\": {\"0\": {\"effect\": -7.6442744924134125, \"value\": 0.0380759064334241}, \"1\": {\"effect\": -14.215760257683764, \"value\": 0.0506801187398187}, \"2\": {\"effect\": 67.76240474276938, \"value\": 0.0616962065186885}, \"3\": {\"effect\": -3.0327242649895574, \"value\": 0.0218723549949558}, \"4\": {\"effect\": -3.2567353475774348, \"value\": -0.0442234984244464}, \"5\": {\"effect\": 5.458552270789105, \"value\": -0.0348207628376986}, \"6\": {\"effect\": 32.58000463619759, \"value\": -0.0434008456520269}, \"7\": {\"effect\": 2.615598924426136, \"value\": -0.00259226199818282}, \"8\": {\"effect\": -35.93180830346122, \"value\": 0.0199084208763183}, \"9\": {\"effect\": -12.673380080002541, \"value\": -0.0176461251598052}}, \"plot_cmap\": \"RdBu\", \"labelMargin\": 20}),\n",
-       "    document.getElementById('iIV6VR63XBGJCQFBMV25M')\n",
+       "    document.getElementById('iI5NEFADONY70F57PASNC')\n",
        "  );\n",
        "</script>"
       ],
       "text/plain": [
-       "<shap.plots._force.AdditiveForceVisualizer at 0x7fc4526e1320>"
+       "<shap.plots._force.AdditiveForceVisualizer at 0x7f821161c9e8>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
