Correct error in calculating rescale factor based on formula

--- a/notebooks/SmoothSHAP.ipynb
+++ b/notebooks/SmoothSHAP.ipynb
@@ -429,17 +429,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "#rescale_factors = np.divide(shap_vals_rf[0,:], reg_smooth_shap_val[0,:])\n",
-    "rescale_factor = np.sum(shap_vals_rf[0,:])/np.sum(reg_smooth_shap_val[0,:])"
+    "rescale_factor_ML = np.sum(shap_vals_rf[0,:])/np.sum(reg_smooth_shap_val[0,:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id='iG2R0A3MC31UQVZPNEWZT'>\n",
+       "<div id='iAXUE6NCM881YWQZFQ3C6'>\n",
        "<div style='color: #900; text-align: center;'>\n",
        "  <b>Visualization omitted, Javascript library not loaded!</b><br>\n",
        "  Have you run `initjs()` in this notebook? If this notebook was from another\n",
@@ -464,15 +464,15 @@
        " <script>\n",
        "   if (window.SHAP) SHAP.ReactDom.render(\n",
        "    SHAP.React.createElement(SHAP.AdditiveForceVisualizer, {\"outNames\": [\"f(x)\"], \"baseValue\": 151.63812217194572, \"outValue\": 183.29999999999998, \"link\": \"identity\", \"featureNames\": [\"age\", \"sex\", \"bmi\", \"bp\", \"s1\", \"s2\", \"s3\", \"s4\", \"s5\", \"s6\"], \"features\": {\"0\": {\"effect\": -7.644274492413409, \"value\": 0.0380759064334241}, \"1\": {\"effect\": -14.215760257683757, \"value\": 0.0506801187398187}, \"2\": {\"effect\": 67.76240474276935, \"value\": 0.0616962065186885}, \"3\": {\"effect\": -3.032724264989556, \"value\": 0.0218723549949558}, \"4\": {\"effect\": -3.256735347577433, \"value\": -0.0442234984244464}, \"5\": {\"effect\": 5.458552270789102, \"value\": -0.0348207628376986}, \"6\": {\"effect\": 32.58000463619757, \"value\": -0.0434008456520269}, \"7\": {\"effect\": 2.6155989244261346, \"value\": -0.00259226199818282}, \"8\": {\"effect\": -35.931808303461196, \"value\": 0.0199084208763183}, \"9\": {\"effect\": -12.673380080002534, \"value\": -0.0176461251598052}}, \"plot_cmap\": \"RdBu\", \"labelMargin\": 20}),\n",
-       "    document.getElementById('iG2R0A3MC31UQVZPNEWZT')\n",
+       "    document.getElementById('iAXUE6NCM881YWQZFQ3C6')\n",
        "  );\n",
        "</script>"
       ],
       "text/plain": [
-       "<shap.plots._force.AdditiveForceVisualizer at 0x7f8211568f98>"
+       "<shap.plots._force.AdditiveForceVisualizer at 0x7f821153b048>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,29 +480,30 @@
    "source": [
     "# Rescaled Smooth SHAP force plot\n",
     "print(\"Model prediction for 1st observation:\", reg_forest.predict(X_dia)[0])\n",
-    "shap.force_plot(explainer_reg.expected_value, reg_smooth_shap_val[0,:]*rescale_factor, features=X_dia.iloc[0,:])"
+    "shap.force_plot(explainer_reg.expected_value, reg_smooth_shap_val[0,:]*rescale_factor_ML, features=X_dia.iloc[0,:])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This rescaling procedure as described by Markus undoes the smoothing, but it could also be a way to rescale the smoothshap values while maintaining the revised feature importance"
+    "This rescaling procedure as described by Markus works.\n",
+    "Another way how to rescale the smoothshap values which yields the same results is shown below"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# (model_prediction - base value) / (sum(smooth_SHAP_values))\n",
-    "rescale_factor = (reg_forest.predict(X_dia)[0]-explainer_reg.expected_value)/reg_smooth_shap_val[0,:].sum()"
+    "rescale_factorPH = (reg_forest.predict(X_dia)[0]-explainer_reg.expected_value)/reg_smooth_shap_val[0,:].sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +517,7 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id='iI5NEFADONY70F57PASNC'>\n",
+       "<div id='i1UX63S4PR8YGUPJJNKX7'>\n",
        "<div style='color: #900; text-align: center;'>\n",
        "  <b>Visualization omitted, Javascript library not loaded!</b><br>\n",
        "  Have you run `initjs()` in this notebook? If this notebook was from another\n",
@@ -527,15 +528,15 @@
        " <script>\n",
        "   if (window.SHAP) SHAP.ReactDom.render(\n",
        "    SHAP.React.createElement(SHAP.AdditiveForceVisualizer, {\"outNames\": [\"f(x)\"], \"baseValue\": 151.63812217194572, \"outValue\": 183.3, \"link\": \"identity\", \"featureNames\": [\"age\", \"sex\", \"bmi\", \"bp\", \"s1\", \"s2\", \"s3\", \"s4\", \"s5\", \"s6\"], \"features\": {\"0\": {\"effect\": -7.6442744924134125, \"value\": 0.0380759064334241}, \"1\": {\"effect\": -14.215760257683764, \"value\": 0.0506801187398187}, \"2\": {\"effect\": 67.76240474276938, \"value\": 0.0616962065186885}, \"3\": {\"effect\": -3.0327242649895574, \"value\": 0.0218723549949558}, \"4\": {\"effect\": -3.2567353475774348, \"value\": -0.0442234984244464}, \"5\": {\"effect\": 5.458552270789105, \"value\": -0.0348207628376986}, \"6\": {\"effect\": 32.58000463619759, \"value\": -0.0434008456520269}, \"7\": {\"effect\": 2.615598924426136, \"value\": -0.00259226199818282}, \"8\": {\"effect\": -35.93180830346122, \"value\": 0.0199084208763183}, \"9\": {\"effect\": -12.673380080002541, \"value\": -0.0176461251598052}}, \"plot_cmap\": \"RdBu\", \"labelMargin\": 20}),\n",
-       "    document.getElementById('iI5NEFADONY70F57PASNC')\n",
+       "    document.getElementById('i1UX63S4PR8YGUPJJNKX7')\n",
        "  );\n",
        "</script>"
       ],
       "text/plain": [
-       "<shap.plots._force.AdditiveForceVisualizer at 0x7f821161c9e8>"
+       "<shap.plots._force.AdditiveForceVisualizer at 0x7f821153b128>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,15 +544,29 @@
    "source": [
     "# Own Rescaled Smooth SHAP force plot\n",
     "print(\"Model prediction for 1st observation:\", reg_forest.predict(X_dia)[0])\n",
-    "shap.force_plot(explainer_reg.expected_value, reg_smooth_shap_val[0,:]*rescale_factor, features=X_dia.iloc[0,:])"
+    "shap.force_plot(explainer_reg.expected_value, reg_smooth_shap_val[0,:]*rescale_factorPH, features=X_dia.iloc[0,:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compare both rescale factors \n",
+    "np.allclose(rescale_factor_ML, rescale_factorPH)"
+   ]
   }
  ],
  "metadata": {
