--- a/notebooks/SmoothSHAP.ipynb
+++ b/notebooks/SmoothSHAP.ipynb
@@ -421,7 +421,9 @@
     "\\widehat{SHAP}^{shrunk}_{j, in} = \\hat{\\beta_j} \\cdot \\phi_j(f,x) \\cdot S_{f,x}\n",
     "$$\n",
     "\n",
-    "where $\\phi_j(f,x) \\equiv  SHAP_{j, in}$ would be the \"raw\", unmodified SHAP score for feature $j$ and input $x$."
+    "where $\\phi_j(f,x) \\equiv  SHAP_{j, in}$ would be the \"raw\", unmodified SHAP score for feature $j$ and input $x$.\n",
+    "\n",
+    "Comment: Since Model prediction = base value $+ \\sum_{j=1}^M{\\phi_j(f,x)}$, this is equivalent to the scaling factor defined below (\"Renormalization factor = (Model prediction - base value) / (Sum of smooth SHAP values)\")"
    ]
   },
   {
@@ -430,7 +432,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rescale_factors = np.divide(shap_vals_rf[0,:], reg_smooth_shap_val[0,:])"
+    "#rescale_factors = np.divide(shap_vals_rf[0,:], reg_smooth_shap_val[0,:])\n",
+    "\n",
+    "rescale_factor = np.sum(shap_vals_rf[0,:])/np.sum(reg_smooth_shap_val[0,:])"
    ]
   },
   {
