--- a/notebooks/SmoothSHAP.ipynb
+++ b/notebooks/SmoothSHAP.ipynb
@@ -424,7 +424,9 @@
     "\\widehat{SHAP}^{shrunk}_{j, in} = \\hat{\\beta_j} \\cdot \\phi_j(f,x) \\cdot S_{f,x}\n",
     "$$\n",
     "\n",
-    "where $\\phi_j(f,x) \\equiv  SHAP_{j, in}$ would be the \"raw\", unmodified SHAP score for feature $j$ and input $x$."
+    "where $\\phi_j(f,x) \\equiv  SHAP_{j, in}$ would be the \"raw\", unmodified SHAP score for feature $j$ and input $x$.\n",
+    "\n",
+    "Comment: Since Model prediction = base value $+ \\sum_{j=1}^M{\\phi_j(f,x)}$, this is equivalent to the scaling factor defined below (\"Renormalization factor = (Model prediction - base value) / (Sum of smooth SHAP values)\")"
    ]
   },
   {
@@ -571,7 +573,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.13 ('venv_master': virtualenv)",
+   "display_name": "Python 3.9.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -585,12 +587,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d94c025da75328d2d5dd40c3f3401a47786a54e19e1715d7009c05d4603d2d1a"
+    "hash": "949777d72b0d2535278d3dc13498b2535136f6dfe0678499012e853ee9abcab1"
    }
   }
  },
