Add functions foor node wise shrinkage

--- a/notebooks/shrinkage_node_wise_difference.ipynb
+++ b/notebooks/shrinkage_node_wise_difference.ipynb
@@ -168,13 +168,17 @@
     "    var_rat = var1/var2\n",
     "\n",
     "    # F value for normal distribution  with alpha and degrees of freedom dfn and dfd\n",
-    "    f_val = st.f.ppf(q=1-(alpha/2), dfn=n1-1, dfd=n2-2)\n",
+    "    f_val_low = st.f.ppf(q=(alpha/2), dfn=n1-1, dfd=n2-2)\n",
+    "    f_val_up = st.f.ppf(q=1-(alpha/2), dfn=n1-1, dfd=n2-2)\n",
     "\n",
     "    # confidence interval\n",
-    "    conf_int = np.array([f_val**(-1)*var_rat, f_val*var_rat])\n",
+    "    conf_int = np.array([f_val_low*var_rat, f_val_up*var_rat])\n",
     "\n",
-    "    # multiplier inside CI wich is closest to 1\n",
-    "    m = np.min(np.abs(conf_int-1))\n",
+    "    # if upper CI < 1., then take CI upper, else take 1\n",
+    "    if conf_int[1]<1.:\n",
+    "        m = conf_int[1]\n",
+    "    else:\n",
+    "        m = 1.\n",
     "\n",
     "    return conf_int, m"
    ]
@@ -199,6 +203,13 @@
     "conf_inv, m = conf_int_ratio_two_var(X_train[\"Age\"], X_test[\"Age\"])\n",
     "conf_inv"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -287,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conf_int, m = conf_int_cohens_d(X_train[\"Age\"], X_test[\"Age\"])"
+    "conf_int,   = conf_int_cohens_d(X_train[\"Age\"], X_test[\"Age\"])"
    ]
   },
   {
