Correct HS-smooth SHAP formula for classification (use parent node feature coef)

--- a/notebooks/shrinkage_node_wise_difference.ipynb
+++ b/notebooks/shrinkage_node_wise_difference.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,36 +180,49 @@
     "    else:\n",
     "        m = 1.\n",
     "\n",
-    "    return conf_int, m"
+    "    return conf_int, m\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.94959552, 1.5122663 ])"
+       "array([0.78077793, 1.23043352])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "conf_inv, m = conf_int_ratio_two_var(X_train[\"Age\"], X_test[\"Age\"])\n",
+    "conf_inv, m = conf_int_ratio_two_var(X_train[\"Sex\"], X_test[\"Sex\"])\n",
     "conf_inv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -221,34 +234,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.050404476933293085\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.050404476933293085"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(np.min(np.abs(conf_inv-1)))\n",
-    "m"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -257,11 +242,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.262157162740992"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st.t.ppf(q=(0.05/2), df=9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def conf_int_cohens_d(pop_1, pop_2, reg_param = 2, alpha=0.05):\n",
+    "def conf_int_cohens_d(pop_1, pop_2, reg_param = 2, alpha=0.05, statistic=\"f\"):\n",
     "\n",
     "    # number of samples per population\n",
     "    n1 = len(pop_1)\n",
@@ -283,10 +288,21 @@
     "    eff_siz = np.sqrt((n1+n2)/(n1*n2)+(d**2/(2*(n1+n2))))\n",
     "\n",
     "    # confidence interval\n",
-    "    conf_int = np.array([d-1.96*eff_siz, d+1.96*eff_siz])\n",
+    "    if statistic==\"f\":\n",
+    "        conf_int = np.array([d-1.96*eff_siz, d+1.96*eff_siz])\n",
+    "    elif statistic==\"t\":\n",
+    "        \n",
+    "        df_pooled = (n1+n2-2) # degrees of freedom pooled\n",
+    "        t_low = np.abs(st.t.ppf(q=(alpha/2), df=df_pooled))\n",
+    "        t_up = np.abs(st.t.ppf(q=(1-alpha/2), df=df_pooled))\n",
     "\n",
-    "    # shrinkage multiplier\n",
-    "    m = (1+reg_param*np.min(np.abs(conf_int)))**(-1)\n",
+    "        conf_int = np.array([d-t_low*eff_siz, d+t_up*eff_siz])\n",
+    "\n",
+    "    # smoothing parameter: if 0 within the range, take 0, else take min abs CI\n",
+    "    if conf_int[0]<=0<=conf_int[1]:\n",
+    "        m = (1+reg_param*0)**(-1) # ==1\n",
+    "    else:\n",
+    "        m = (1+reg_param*np.min(np.abs(conf_int)))**(-1)\n",
     "\n",
     "    return conf_int, m\n",
     "    "
@@ -294,30 +310,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conf_int,   = conf_int_cohens_d(X_train[\"Age\"], X_test[\"Age\"])"
+    "conf_int, m = conf_int_cohens_d(X_train[\"Sex\"], X_test[\"Age\"], statistic=\"f\")\n",
+    "conf_int_t, mt = conf_int_cohens_d(X_train[\"Sex\"], X_test[\"Age\"], statistic=\"t\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.01125189  0.30891115]\n",
-      "0.977991501227329\n"
+      "[-3.98645815 -3.48406162]\n",
+      "[-3.98688127 -3.48363851]\n"
      ]
     }
    ],
    "source": [
     "print(conf_int)\n",
-    "print(m)"
+    "print(conf_int_t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.12550006683797374\n",
+      "0.12551339661436672\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(m)\n",
+    "print(mt)"
    ]
   },
   {
