--- a/notebooks/Reestimate_node_values.ipynb
+++ b/notebooks/Reestimate_node_values.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "id": "6ae46a97",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "id": "8bfef773",
    "metadata": {},
    "outputs": [],
@@ -32,27 +23,30 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from TreeModelsFromScratch.DecisionTree import DecisionTree\n",
+    "from TreeModelsFromScratch.RandomForest import RandomForest\n",
+    "from TreeModelsFromScratch.SmoothShap import verify_shap_model, smooth_shap, GridSearchCV_scratch, cross_val_score_scratch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "id": "2dd33cfa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Import Tree Models from scratch functions\n",
-    "import sys\n",
-    "import os\n",
+    "# #Import Tree Models from scratch functions\n",
+    "# import sys\n",
+    "# import os\n",
     "\n",
-    "module_path = os.path.abspath(os.path.join('..'))\n",
-    "if module_path not in sys.path:\n",
-    "    sys.path.append(module_path+\"/TreeModelsFromScratch\")\n",
+    "# module_path = os.path.abspath(os.path.join('..'))\n",
+    "# if module_path not in sys.path:\n",
+    "#     sys.path.append(module_path+\"/TreeModelsFromScratch\")\n",
     "\n",
-    "from DecisionTree import DecisionTree\n",
-    "from RandomForest import RandomForest\n",
-    "from SmoothShap import verify_shap_model, smooth_shap"
+    "# from DecisionTree import DecisionTree\n",
+    "# from RandomForest import RandomForest\n",
+    "# from SmoothShap import verify_shap_model, smooth_shap"
    ]
   },
   {
@@ -73,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "id": "3a2bfc90",
    "metadata": {},
    "outputs": [],
@@ -87,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f65e8904",
    "metadata": {},
    "outputs": [],
@@ -469,17 +463,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "c98a9ae2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "node_vals_train, result, nan_rows = reg_tree._reestimate_node_values(X_train,y_train)"
+    "node_vals_train, result, nan_rows, y_vals_p_node = reg_tree._reestimate_node_values(X_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "759315e6",
    "metadata": {},
    "outputs": [
@@ -489,7 +483,7 @@
        "array([], dtype=int64)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "b5fb8c48",
    "metadata": {},
    "outputs": [
@@ -541,7 +535,7 @@
        " 30: {'samples': 6, 'value': 203.5}}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "3fc4c91a",
    "metadata": {},
    "outputs": [
@@ -570,7 +564,7 @@
        "       225.75      , 292.5       , 203.5       ])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "acd46787",
    "metadata": {},
    "outputs": [],
@@ -592,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "5ced4a25",
    "metadata": {},
    "outputs": [
@@ -602,7 +596,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,18 +616,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
+   "id": "b1c0dbf2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([150., 125.,  59.,  65.,  90.,  72.,  88., 101.,  97.,  53.,  71.,\n",
+       "       102., 189., 206.,  97.,  60.,  61., 128., 104., 132., 283., 129.,\n",
+       "       257., 137.,  63.,  93., 179., 262.,  51.,  71.,  69., 154., 116.,\n",
+       "        81., 292.,  55., 107.,  91., 253.,  85., 252.,  59.,  78., 200.,\n",
+       "        78., 245.,  42., 127.,  53.,  94., 104., 199., 248., 170.,  59.,\n",
+       "       209., 138., 198., 124.,  96., 101.,  51.,  64., 103.,  86., 111.,\n",
+       "        65.,  51.,  48., 109., 178.,  88., 216.,  96., 190.,  74., 160.,\n",
+       "       196.,  97.,  69., 182., 161., 214.,  45., 150., 160.,  55., 197.,\n",
+       "       185., 123.,  72., 185., 144., 168., 151.,  83., 152.,  66., 214.,\n",
+       "        85., 129.,  89., 259., 229., 200.,  77.,  54.,  31., 109., 206.,\n",
+       "       118.,  83.,  72., 163., 181.,  71., 179., 102., 131.,  47.,  77.,\n",
+       "        93., 162., 183.,  81.,  55., 146., 230.,  40., 135.,  43.,  77.,\n",
+       "        49.,  74.,  92.,  84., 144., 142., 115., 158.,  88.,  39.,  80.,\n",
+       "       217.,  52., 115., 131.,  71., 118.,  25., 100., 200.,  91.,  73.,\n",
+       "        66.,  87.,  39.,  92., 292., 142.,  50.,  53., 104.,  75., 120.,\n",
+       "        65., 116.,  95.,  59., 139., 177., 185.,  97.,  42., 241.,  70.,\n",
+       "        49.,  44., 191.,  47.,  58., 155.,  79., 104., 143., 152., 170.,\n",
+       "        75., 200., 124.,  49.,  53., 178., 219., 113.,  63., 114., 126.,\n",
+       "        88.,  83.,  71., 134.,  65.,  57.,  68., 141., 134., 148.,  64.])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Filter out nan values for nodeid =1 (observations which did not pass this node)\n",
+    "y_vals_p_node[1,:][~np.isnan(y_vals_p_node[1,:])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "b0559b44",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Lets try it with the test data now\n",
-    "node_vals_test, result_test, nan_rows = reg_tree._reestimate_node_values(X_test, y_test)"
+    "node_vals_test, result_test, nan_rows, y_vals_p_node_test = reg_tree._reestimate_node_values(X_test, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "51be0d99",
    "metadata": {},
    "outputs": [
@@ -643,7 +677,7 @@
        "array([22, 25, 26, 27])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "467708bd",
    "metadata": {},
    "outputs": [
@@ -672,7 +706,7 @@
        "       219.75      , 140.        , 246.33333333])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "id": "fe86e867",
    "metadata": {},
    "outputs": [
@@ -700,7 +734,7 @@
        "       225.75      , 292.5       , 203.5       ])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
    "id": "7b587684",
    "metadata": {},
    "outputs": [
@@ -721,7 +755,7 @@
        "False"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 32,
    "id": "32691b2d",
    "metadata": {},
    "outputs": [
@@ -750,7 +784,7 @@
        "          6.        ,  152.5       ,  -42.83333333])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 33,
    "id": "153cd28d",
    "metadata": {},
    "outputs": [
@@ -778,7 +812,7 @@
        "       -0.17388363])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,6 +820,54 @@
    "source": [
     "# Change in pct between orig and node val new\n",
     "np.divide(orig_node_vals,node_vals_test)-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "057b7bc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_vals_p_node_test.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "ed0c8b96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([219., 202., 111.,  84.,  94.,  94., 252.,  99., 135.,  64., 128.,\n",
+       "        77.,  48., 107., 113., 164.,  42.,  84., 172.,  63.,  48., 108.,\n",
+       "       156., 168.,  90.,  52., 200.,  87.,  90., 258., 158.,  72., 171.,\n",
+       "        72., 168.,  60., 102., 214., 181., 110., 140., 202., 101., 281.,\n",
+       "        61.,  89.,  91., 233.,  68., 190.,  96.,  72., 153.,  98.,  37.,\n",
+       "        63.])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Filter out nan values for nodeid =1 (observations which did not pass this node)\n",
+    "y_vals_p_node_test[1,:][~np.isnan(y_vals_p_node_test[1,:])]"
    ]
   },
   {
