--- a/notebooks/shrinkage_node_wise_difference.ipynb
+++ b/notebooks/shrinkage_node_wise_difference.ipynb
@@ -152,11 +152,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "def conf_int_ratio_two_var(pop_1, pop_2, alpha=0.05):\n",
+    "    '''Calculate shrinkage parameter based on confidence interval based on 2-sample difference in variances'''\n",
     "\n",
     "    # number of samples per population\n",
     "    n1 = len(pop_1)\n",
